--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,19 @@ Cheetah==2.4.4
 CherryPy==3.5.0
 Cython==0.20.1
 DataShape==0.2
-Flask==0.12.3
+flask>=1.0.0
 FormEncode==1.2.6
 Jinja2>=2.10.1
 Markdown==2.5.1
 MarkupSafe==0.18
 MySQL-python==1.2.3
 PIL==1.1.7
-PyYAML==4.2b1
-Pygments==1.6
-SQLAlchemy==0.9.4
+PyYAML>=5.4
+Pygments>=2.7.4
+SQLAlchemy>=1.3.0
 SQLObject==1.6.0
 Sphinx==1.2.2
-Werkzeug==0.9.6
+werkzeug>=0.15.3
 XlsxWriter==0.5.5
 argcomplete==0.6.7
 astropy==0.3.2
@@ -53,7 +53,7 @@ itsdangerous==0.24
 jdcal==1.0
 kiwisolver==0.1.2
 llvmpy==0.12.6
-lxml==3.3.5
+lxml>=4.6.3
 matplotlib==1.3.1
 mccabe==0.2.1
 menuinst==1.0.3
@@ -61,7 +61,7 @@ mock==1.0.1
 multipledispatch==0.4.3
 networkx==1.8.1
 neurolab==0.3.4
-nltk==3.0.0
+nltk>=3.4.5
 nose==1.3.4
 numba==0.13.2
 numexpr==2.3.1
@@ -72,8 +72,8 @@ patsy==0.2.1
 pep257==0.3.2
 pep8==1.5.7
 ply==3.4
-psutil==2.1.1
-py==1.4.26
+psutil>=5.6.6
+py>=1.10.0
 pycosat==0.6.1
 pycparser==2.10
 pyface==4.4.0
