--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ nltk>=3.4.5
 nose==1.3.4
 numba==0.13.2
 numexpr==2.3.1
-numpy==1.9.1
+numpy>=1.21
 openpyxl==1.8.5
 pandas==0.14.0
 patsy==0.2.1
@@ -84,7 +84,7 @@ pyreadline==2.0
 pytest==2.6.4
 python-dateutil==1.5
 pytz==2014.7
-pywin32==218.4
+pywin32>=301
 pyzmq==14.3.0
 requests==2.20.0
 runipy==0.1.0
